--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -4,7 +4,7 @@
 
 ******************************************/
 .contact{
-	padding:0 1rem 4rem 4.2rem;
+	padding:0 1rem 4rem 5rem;
 	background-color:#232020;
 	text-align:center;
 }
@@ -25,7 +25,7 @@
 
 	.contact-input,
 	.contact-txtarea{
-		width:96%;
+		width:100%;
 		padding: 6px;
 		font-size: 1.6rem;
 		border: 1px solid #ccc;
@@ -61,12 +61,14 @@
 .submit{
 	width:11rem;
 	height: 3rem;
+	line-height:3.4rem;
 	background-color:#F75959;
 	border: none;
 	color: #fff;
-	font-size: 1.6rem;
+	font-size: 2.2rem;
 	font-weight: 100;
 	cursor:pointer;
+	font-family:$body-font-family;
 }	
 
 	.submit:focus{
