Editted gazettemag page and portfolio list

--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -12,6 +12,7 @@
 .contact-h2{
 	padding:1.5rem 0;
 	font-size: 2rem;
+	line-height:2.2rem;
 	font-weight:700;
 	font-family:Candida,"Times New Roman", Times, serif;
 	color:#fff;
@@ -28,7 +29,7 @@
 		width:100%;
 		padding: 6px;
 		font-size: 1.6rem;
-		border: 1px solid #ccc;
+		border: 1px solid #ccc;		
 	}
 
 	.contact-input{
