--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -21,8 +21,9 @@ body{
 	font-family:$body-font-family;
 	-webkit-font-smoothing: antialiased;
 	color: #333;
-	font-size:16px;
-	font-size:1.6rem;
+	font-size:18px;
+	font-size:1.8rem;
+	line-height:2.6rem;
 }
 
 li{
@@ -48,4 +49,10 @@ a{
 	display:block;
 	text-decoration:none;
 	color:#333;
+}
+
+input,
+textarea{
+	-webkit-appearance: none;
+	border-radius: 0;	
 }
