--- a/sass/layout/_list.scss
+++ b/sass/layout/_list.scss
@@ -16,17 +16,20 @@
 
 .portfolio-h1{
 	font-family:$portfolio-font-family;
-	font-size:2rem;
+	font-size:2.4rem;
+	line-height:2.6rem;
 	font-weight:bold;
 }
 
 .portfolio-h3{
-	font-size: 1.4rem;
+	font-size: 1.6rem;
+	line-height:1.8rem;
 	font-weight: bold;
 }
 
 .portfolio-i{
-	font-size: 1.2rem;
+	font-size: 1.4rem;
+	line-height:1.6rem;
 	font-weight: 100;
 }
 
@@ -329,7 +332,7 @@
 ********************************/
 .portfolio-eas{
 	position:relative;
-	padding: 1.5rem 0 4rem 5rem;
+	padding:1.5rem 1.5rem 10% 5rem;
 	background-image: url(img/eastasianserif/eastop-bg.jpg);
 	background-repeat: no-repeat;
 	background-size:cover;
