--- a/sass/layout/_responsive.scss
+++ b/sass/layout/_responsive.scss
@@ -9,14 +9,10 @@
 		line-height: 4.6rem;
 	}
 
-	// .about-h2{
-
-	// }
-
-	// .about-offer{
-	// 	margin-left:2rem;
-	// }	
-
+	.page-h1{
+		font-size: 3.4rem;
+		line-height:3.6rem;
+	}
 }
 
 @media (min-width: 333px){
@@ -31,6 +27,14 @@
 }
 
 @media (min-width: 340px){
+	.about-h3-lead{
+		font-size:2.2rem;
+	}
+
+	.about-h3{
+		font-size:2.2rem;
+	}
+
 	.eas-content{
 		background:url(img/eastasianserif/sakura.png) no-repeat scroll -10px 19.4%;
 		background-size:62%;
@@ -81,6 +85,7 @@
 		padding: 2rem;
 		font-size:1.8rem;
 	}
+
 	.ubc-winner{
 		margin: 0 0 3rem;
 	}
@@ -96,7 +101,6 @@
 
 @media (min-width: 480px){
 	.icon-bar {
-		width:3.2rem;
 		height:0.5rem;
 	}
 	
@@ -186,26 +190,44 @@
 	.pf-next-img{
 		top:4rem;
 	}
-	
+
 	.portfolio-h1{
-		font-size:3.6rem;
-		font-weight:bold;
+		font-size:3.3rem;
+		line-height:3.5rem;
 	}
 	
-	.portfolio-h3{
-		font-size: 1.2rem;
-		font-weight: bold;
-	}
+	// .portfolio-h3{
+	// 	font-size: 1.2rem;
+	// 	font-weight: bold;
+	// }
 	
-	.portfolio-i{
-		font-size: 1.2rem;
-		font-weight: 100;
-	}
+	// .portfolio-i{
+	// 	font-size: 1.2rem;
+	// 	font-weight: 100;
+	// }
 	
+	.portfolio-gzt,
+	.portfolio-eas{
+		padding:2rem 1.5rem 10% 5rem;
+	}
+
 	.portfolio-ubc,
 	.portfolio-nwp{
-		padding:1.5rem 3rem 0 5rem;
+		padding:2rem 3rem 0 5rem;
 	}
+
+	/*gazettemag*/
+	.gzt-left{
+		float:left;
+		width:54%;
+		padding-right:3rem;
+	}
+
+	.gzt-right{
+		float:right;
+		width:46%;
+	}
+
 	/***ubcbaja***/
 	.ubc-winner{
 		width:auto;
@@ -215,26 +237,27 @@
 	}
 	/***ecommerce***/
 	.portfolio-ecm{
-		padding:1.5rem 0 0 5rem;
+		padding:2rem 1.5rem 10% 5rem;
 	}
 	/***reggiekey***/
 	.left-rgk{
 		/*width: 90%;*/
 	}
 	.rgkleft-inner{
-		top:1.5rem;
+		top:2rem;
 		left:8.4rem;
 	}
 	.pf-next-rgk{
 		margin-left:6rem;
 	}
 	.rgk-topimg{
-		margin-top: 9.6rem;
+		margin-top: 10rem;
+		margin-bottom:1rem;
 	}
 		
 	/***wazabibuzz/typography***/
 	.portfolio-wzb{
-		padding:1.5rem 0 0 5rem;
+		padding:2rem 0 0 5rem;
 	}
 	
 	.portfolio-wzb{
@@ -244,9 +267,9 @@
 		margin-left:12%;
 	}
 	
-	.portfolio-eas{
-		padding:1.5rem 0 10rem 5rem;
-	}
+	// .portfolio-eas{
+	// 	padding:2rem 0 10rem 5rem;
+	// }
 
 	/***portfolio-inner***/
 	.page-headdescription{
@@ -266,14 +289,15 @@
 	}
 	
 	.page-h1{
-		font-size:3rem;
+		font-size:4rem;
 		padding-bottom:1.3rem;
-		line-height:3rem;
+		line-height:4rem;
 	}
 	
 	.page-h2,
 	.ubc-inner-h3-mockup{
-		font-size:2.4rem;
+		font-size:3rem;
+		line-height:3.4rem;
 	}
 		
 	/***ubcbaja***/
@@ -285,6 +309,10 @@
 		font-size:1.8rem;
 	}
 	/***newsportal***/
+	.nwp-h1{
+		padding-bottom:0.4rem;
+	}
+
 	.nwp-backend-loginform > p{
 		font-size: 2.6rem;
 	}
@@ -317,6 +345,7 @@
 
 	.contact-h2{
 		font-size:2.6rem;
+		line-height:2.8rem;
 	}
 	
 	.contact-label{
@@ -352,8 +381,8 @@
 	}	
 
 	.about-offer-ul1{
-		margin:0 0 3rem 10rem;
-		width:100%;
+		margin:0 -3rem 3rem 10rem;
+		width:auto;
 	}
 
 		.about-offer-ul1 > li{
@@ -384,12 +413,14 @@
 			padding:60px 60px 100px 130px;
 		}
 
-	.portfolio-gzt{
-		padding:1.5rem 1.5rem 20% 5rem;
+	.portfolio-gzt,
+	.portfolio-eas{
+		padding:2rem 1.5rem 20% 5rem;
 	}
 
 	.portfolio-h1{
 		font-size:4rem;
+		line-height:4.2rem;
 	}
 	
 	.pf-nextmob,
@@ -398,13 +429,18 @@
 	}
 	/***portfolio-inner***/
 	.page-h1{
-		font-size:4rem;
-		line-height:4rem;
+		font-size:4.6rem;
+		line-height:4.6rem;
 	}
 	
 	.page-inner-top{
 		padding:0.8rem 6rem 4rem;
 	}
+	/***gazettemag***/
+	.gzt-sp-post{
+		width:50%;
+	}
+
 	/***ubcbajba***/
 	.ubc-winner{
 		margin:0 0 6rem;
@@ -437,9 +473,9 @@
 		margin-top: 10.2rem;
 	}	
 	/***typography***/
-	.portfolio-eas{
-		padding: 1.5rem 0 10rem 4.2rem;
-	}
+	// .portfolio-eas{
+	// 	padding: 1.5rem 0 10rem 4.2rem;
+	// }
 	
 	.eas-content{
 		background:url(img/eastasianserif/sakura.png) no-repeat scroll -10px 16.4%;
@@ -448,6 +484,7 @@
 	/***contact***/
 	.contact-h2{
 		font-size:3rem;
+		line-height:3.2rem;
 	}
 	
 }
@@ -475,8 +512,6 @@
 		font-size:6rem;
 		line-height: 7rem;
 	}
-	
-
 
 	.aboutme{
 		background-size:90% auto;
@@ -494,7 +529,7 @@
 	.seemywork-img{
 		top:80px;
 		right:-3px;
-	}	
+	}
 
 	/***portfolio-inner***/
 	.page-headdescription{
@@ -514,8 +549,8 @@
 	}
 	
 	.page-h1{
-		font-size:4.6rem;
-		line-height:4.6rem;
+		font-size:5rem;
+		line-height:5rem;
 	}
 		
 	.pf-next-img{
@@ -552,9 +587,9 @@
 		padding: 3rem 0 0 5rem;
 	}
 	
-	.portfolio-eas{
-		padding: 3rem 0 13rem 5rem;
-	}
+	// .portfolio-eas{
+	// 	padding: 3rem 0 13rem 5rem;
+	// }
 	/***portfolio-inner***/	
 	.listred-inner,
 	.listblue-inner,
@@ -562,9 +597,9 @@
 		font-size:1.8rem;
 	}
 	
-	.description-p{
-		font-size:1.8rem;
-	}
+	// .description-p{
+	// 	font-size:1.8rem;
+	// }
 	/***ubcbaja***/	
 	.tstmnl-left{
 		float:left;
@@ -616,6 +651,7 @@
 	/***contact***/
 	.contact-h2{
 		font-size:3.6rem;
+		line-height:3.8rem;
 	}	
 	
 	.contact-input{
@@ -693,6 +729,7 @@
 	
 	.portfolio-h1{
 		font-size:5rem;
+		line-height:5.2rem;
 	}
 	
 	.portfolio-h3{
@@ -735,9 +772,9 @@
 		margin-top:6rem;
 	}
 	/***typograpohy***/
-	.portfolio-eas{
-		padding:3rem 0 16rem 6rem
-	}
+	// .portfolio-eas{
+	// 	padding:3rem 0 16rem 6rem
+	// }
 	
 	.pf-next-eas{
 		margin-top:5rem;
@@ -755,14 +792,17 @@
 	.page-inner-top{
 		padding:0.6rem 6rem 4rem;
 	}
-		.page-h1{
-			font-size:5rem;
-		}
+
 		
 		.page-h2,
 		.ubc-inner-h3-mockup{
 			font-size:3rem;
 		}
+
+	/***gazettemag***/
+	.gzt-sp-post{
+		width:40%;
+	}
 	/***ubcbaja***/
 	.ubc-h1{
 		line-height:5rem;
@@ -876,6 +916,7 @@
 	
 	.contact-h2{
 		font-size:4rem;
+		line-height:4.2rem;
 	}
 	
 	.contact-form,
@@ -907,8 +948,13 @@
 		line-height: 9rem;
 	}
 	
-	.portfolio-gzt{
-		padding:1.5rem 1.5rem 30% 5rem;
+	.portfolio-gzt,
+	.portfolio-eas{
+		padding:3rem 1.5rem 30% 5rem;
+	}
+
+	.about-offer-ul1 > li:nth-child(2n+1){
+		clear:none;
 	}
 
 	.sps-before,
@@ -950,10 +996,18 @@
 		font-size:6rem;
 	}
 	
-	.page-h2,
+	.page-h2{
+		font-size:3.6rem;
+	}
+
 	.ubc-inner-h3-mockup{
 		font-size:3rem;
 	}
+	/***gazettemag***/
+	.gzt-sp-post{
+		width:30%;
+	}
+
 	/***ubcbaja***/
 	.ubc-h1{
 		line-height:6rem;
@@ -980,6 +1034,7 @@
 	}
 	.rgk-h1{
 		line-height:5rem;
+		margin-top:0.6rem;
 	}
 	/***wazabibuzz***/
 	.wzb-h1{
@@ -989,9 +1044,9 @@
 		width:auto;
 	}
 	/***typography***/
-	.portfolio-eas{
-		height:30rem;
-	}
+	// .portfolio-eas{
+	// 	height:30rem;
+	// }
 	
 	.eas-h1{
 		line-height:5.3rem;
@@ -1032,6 +1087,7 @@
 	
 	.portfolio-h1{
 		font-size:6rem;
+		line-height:6.2rem;
 	}
 			
 	.eas-content{
@@ -1041,9 +1097,9 @@
 			url(img/eastasianserif/sakura.png) -10px 1000px no-repeat;
 	}
 
-	.portfolio-eas{
-		height:44rem;
-	}
+	// .portfolio-eas{
+	// 	height:44rem;
+	// }
 }
 
 /*****************************************
