Modified mobile.js to change icon bar's color

--- a/sass/layout/_responsive.scss
+++ b/sass/layout/_responsive.scss
@@ -803,6 +803,10 @@
 	.gzt-sp-post{
 		width:40%;
 	}
+
+	.gzt-cards{
+		margin-bottom:-8rem;
+	}	
 	/***ubcbaja***/
 	.ubc-h1{
 		line-height:5rem;
