Changed favicon, refined some codes

--- a/sass/layout/_list.scss
+++ b/sass/layout/_list.scss
@@ -16,8 +16,8 @@
 
 .portfolio-h1{
 	font-family:$portfolio-font-family;
-	font-size:2.4rem;
-	line-height:2.6rem;
+	font-size:2.8rem;
+	line-height:2.8rem;
 	font-weight:bold;
 }
 
@@ -73,7 +73,7 @@
 ********************************/
 .portfolio-gzt{
 	position:relative;
-	padding:1.5rem 1.5rem 10% 5rem;
+	padding:1.5rem 1.5rem 20% 5rem;
 	background-image: url(img/gazettemag/gazettemag-bg.jpg);
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -115,7 +115,7 @@
 }
 
 .ubc-underleft{
-	margin-top:2rem;
+	margin-top:1rem;
 }
 
 .ubc-underright{
@@ -160,7 +160,7 @@
 }
 
 	.nwp-topimg{
-		margin-top:-20px;
+		margin-top:1rem;;
 		margin-right: 31%;
 	}
 	
@@ -267,15 +267,15 @@
 	}
 
 		.pf-next-rgk{
-			width:60%;
-			margin-top:68%;
-			margin-left:33.2%;	
+			width:72%;
+			margin-top:35%;
+			margin-left:34.2%;	
 			background-color:rgba(33,33,33,0.8);
 		}
 
 		.rgk-topimg{
 			max-width:100%;
-			margin-top: 8rem;
+			margin-top: 5rem;
 		}
 
 /*******************************
@@ -346,7 +346,7 @@
 }
 
 .pf-next-eas{
-	width:33%;
+	width:40%;
 	margin-top:3rem;
 	background-color:rgba(0,0,0,0.6);
 	border:1px solid #ccc;
