--- a/sass/layout/_list.scss
+++ b/sass/layout/_list.scss
@@ -49,10 +49,10 @@
 }
 
 .pf-nextmob-w{
-	padding:12px;
+	padding:1.2rem;
 	border:1px solid #fff;
 	color:#fff;
-	font-size:1.3rem;
+	font-size:1.6rem;
 	text-align:center;
 }
 
