--- a/sass/layout/_responsive.scss
+++ b/sass/layout/_responsive.scss
@@ -67,9 +67,9 @@
 		width:40%;
 	}
 		
-	.pf-nextmob-w{
-		font-size:1.4rem;
-	}
+	// .pf-nextmob-w{
+	// 	font-size:1.4rem;
+	// }
 	
 		.rgkleft-inner{
 			left:7.6rem;
@@ -176,12 +176,12 @@
 	}	
 	
 	.seemywork-img{
-		top:80px;
-		right:-3px;
+		top:8rem;
+		right:-0.3rem;
 	}
 	
 	.showmore{
-		width:96px;
+		width:9.6rem;
 	}
 	/***portfolio***/
 	.pf-next,
@@ -191,7 +191,8 @@
 	
 	.pf-nextmob,
 	.pf-nextmob-w{
-		padding:17px;
+		padding:1.7rem;
+		font-size:1.8rem;
 	}
 	.pf-next-img{
 		top:4rem;
@@ -437,7 +438,7 @@
 	
 	.pf-nextmob,
 	.pf-nextmob-w{
-		font-size:1.6rem;
+		font-size:2rem;
 	}
 	/***portfolio-inner***/
 	.page-h1{
