--- a/sass/layout/_contact.scss
+++ b/sass/layout/_contact.scss
@@ -24,6 +24,10 @@
 	margin:0;
 }
 
+.contact-form{
+	margin-bottom:3rem;
+}
+
 	.contact-input,
 	.contact-txtarea{
 		width:100%;
@@ -66,8 +70,8 @@
 	background-color:#2bac80;
 	border: none;
 	color: #fff;
-	font-size: 2.2rem;
-	font-weight: 100;
+	font-size: 1.6rem;
+	font-weight: bold;
 	cursor:pointer;
 	font-family:$body-font-family;
 }	
