--- a/sass/layout/_responsive.scss
+++ b/sass/layout/_responsive.scss
@@ -35,6 +35,10 @@
 		font-size:2.2rem;
 	}
 
+	.pf-nextmob-w{
+		padding:1.2rem;	
+	}
+
 	.eas-content{
 		background:url(img/eastasianserif/sakura.png) no-repeat scroll -10px 19.4%;
 		background-size:62%;
@@ -361,7 +365,8 @@
 		line-height:2.8rem;
 	}
 	
-	.contact-label{
+	.contact-label,
+	.submit{
 		font-size:2rem;
 	}
 	
@@ -390,7 +395,7 @@
 	}
 	
 	.about-h2{
-		margin:0 0 2rem 10rem;
+		margin:0 0 4.5rem 10rem;
 	}	
 
 	.about-offer-ul1{
@@ -400,7 +405,7 @@
 
 		.about-offer-ul1 > li{
 			float:left;
-			margin:0 3rem 3rem 0;
+			margin:0 3rem 4.5rem 0;
 		}
 
 		.about-h3-lead{
